# serde-plain2

./: Cargo.toml  LICENSE  README.md
src/: de.rs  error.rs  lib.rs  macros.rs
tests/: test_de.rs  test_macros.rs  test_ser.rs
