[package]
name = "serde_plain2"
version = "0.1.0"
edition = "2021"
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]
license = "MIT"
description = "Fork of serde_plain. A restricted plain text serializer for serde"
homepage = "https://docs.rs/serde_plain2"
documentation = "https://docs.rs/serde_plain2"
repository = "https://github.com/0xJWLabs/serde-plain2"
keywords = ["serde", "serialization", "from_str", "display"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
serde = "1.0.215"
thiserror = "2.0.4"

[dev-dependencies]
serde_derive = "1.0.215"
